Closed
Bug 414854
Opened 15 years ago
Closed 15 years ago
Firefox crashs on http://www.tvblogger.de/ [@ row_callback]
Categories
(Core :: ImageLib, defect, P1)
Tracking
()
VERIFIED
FIXED
mozilla1.9beta3
People
(Reporter: broedli, Assigned: MatsPalmgren_bugz)
References
()
Details
(Keywords: crash, regression)
Crash Data
Attachments
(3 files, 1 obsolete file)
16.84 KB,
text/plain
|
Details | |
5.47 KB,
patch
|
jag+mozilla
:
review+
jag+mozilla
:
superreview+
beltzner
:
approval1.9b3+
|
Details | Diff | Splinter Review |
141 bytes,
image/png
|
Details |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; de; rv:1.8.1.10) Gecko/20071115 Iceweasel/2.0.0.10 (Debian-2.0.0.10-0etch1) Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9b3pre) Gecko/2008013007 Minefield/3.0b3pre Firefox crashs while loading http://www.tvblogger.de/ Reproducible: Always Steps to Reproduce: 1. Load http://www.tvblogger.de/ Regression range: 20080129_2220_firefox-3.0b3pre.en-US.linux-i686.tar.bz2 works 20080129_2232_firefox-3.0b3pre.en-US.linux-i686.tar.bz2 crashs http://hourly-archive.localgho.st/linux/20080129_2232_checkins.html The crash doesn't always trigger Breakpad. Crash reports: Debian Etch: http://crash-stats.mozilla.com/report/index/0ab4dda1-cf0e-11dc-8f66-001a4bd43ef6 http://crash-stats.mozilla.com/report/index/a094225c-cf47-11dc-8492-001a4bd43ed6 Windows XP: http://crash-stats.mozilla.com/report/index/bf9aaa61-cf1f-11dc-9b13-001a4bd43ed6
Reporter | ||
Updated•15 years ago
|
Version: unspecified → Trunk
Assignee | ||
Comment 1•15 years ago
|
||
Assignee | ||
Updated•15 years ago
|
Blocks: 413143
Severity: normal → critical
Status: UNCONFIRMED → NEW
Component: General → ImageLib
Ever confirmed: true
Keywords: crash,
regression
Product: Firefox → Core
QA Contact: general → imagelib
Summary: Firefox crashs on http://www.tvblogger.de/ → Firefox crashs on http://www.tvblogger.de/ [@ row_callback]
Assignee | ||
Updated•15 years ago
|
Flags: blocking1.9?
Target Milestone: --- → mozilla1.9beta3
Assignee | ||
Comment 2•15 years ago
|
||
The first loop may take three iterations to become aligned; if the width is less than that we will do "idx--" when idx is zero.
Attachment #300385 -
Flags: review?(jag)
Assignee | ||
Comment 3•15 years ago
|
||
Fixing typo
Attachment #300385 -
Attachment is obsolete: true
Attachment #300388 -
Flags: review?(jag)
Attachment #300385 -
Flags: review?(jag)
Assignee | ||
Comment 4•15 years ago
|
||
Updated•15 years ago
|
Assignee: nobody → mats.palmgren
Comment 5•15 years ago
|
||
Comment on attachment 300388 [details] [diff] [review] Like so? Doh! Good find.
Attachment #300388 -
Flags: superreview+
Attachment #300388 -
Flags: review?(jag)
Attachment #300388 -
Flags: review+
Attachment #300388 -
Flags: approval1.9b3?
Updated•15 years ago
|
Flags: blocking1.9? → blocking1.9+
Priority: -- → P1
Comment 7•15 years ago
|
||
Comment on attachment 300388 [details] [diff] [review] Like so? a=beltzner for beta 3
Attachment #300388 -
Flags: approval1.9b3? → approval1.9b3+
Comment 9•15 years ago
|
||
I'd like to get this in for tomorrow's nightlies, so if someone can land and shepherd it, that'd be great.
Keywords: checkin-needed
Assignee | ||
Comment 10•15 years ago
|
||
mozilla/modules/libpr0n/decoders/gif/nsGIFDecoder2.cpp 1.98 mozilla/modules/libpr0n/decoders/jpeg/nsJPEGDecoder.cpp 1.91 mozilla/modules/libpr0n/decoders/png/nsPNGDecoder.cpp 1.79 -> FIXED
Status: NEW → RESOLVED
Closed: 15 years ago
Flags: in-testsuite?
Keywords: checkin-needed
Resolution: --- → FIXED
Assignee | ||
Comment 11•15 years ago
|
||
I'm not sure where to land the crashtest, we only have: modules/libpr0n/test/reftest/ modules/libpr0n/test/unit/ should I start a new directory for it? modules/libpr0n/test/crashtests/ or perhaps modules/libpr0n/crashtests/
Comment 13•15 years ago
|
||
(In reply to comment #11) > I'm not sure where to land the crashtest, we only have: > modules/libpr0n/test/reftest/ > modules/libpr0n/test/unit/ > > should I start a new directory for it? > modules/libpr0n/test/crashtests/ I'd say this one, for greatest consistency.
Comment 14•15 years ago
|
||
Verified on Fxb3rc2: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b3) Gecko/2008020514 Firefox/3.0b3 This does not crash on testcase.
Comment 15•15 years ago
|
||
verified fixed using Mozilla/5.0 (Windows; U; Windows NT 5.2; en-US; rv:1.9b3) Gecko/2008020514 Firefox/3.0b3 ID:2008020514, no crash on testcase -> Verified fixed
Status: RESOLVED → VERIFIED
Updated•11 years ago
|
Crash Signature: [@ row_callback]
You need to log in
before you can comment on or make changes to this bug.
Description
•