Don't decrement the loop variable when it's zero. b=414854 r+sr=jag approval1.9b3=beltzner